--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pinniped-sdk",
   "version": "0.0.1",
   "description": "SDK for communicating with your Pinniped backend",
-  "main": "src/index.js",
+  "main": "src/Pinniped.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
