--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
   "name": "pinniped-sdk",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "SDK for communicating with your Pinniped backend",
   "main": "src/Pinniped.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "contributors": [
+    {
+      "name": "Alan Cho",
+      "email": "alancho397@gmail.com"
+    },
+    {
+      "name": "Jonathan Hurd",
+      "email": "hurd.jonathan@gmail.com"
+    },
+    {
+      "name": "Josh Lakenan",
+      "email": "joshlakenan@gmail.com"
+    },
+    {
+      "name": "Trevor Rees-Jones",
+      "eail": "treesjones3@gmail.com"
+    }
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
